Fix JWTUtils and tests